# anduma

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  alerts.py  cache.py  config.py  db.py  gtfs_static.py  main.py  me.py  models.py  provider.py  push.py  realtime.py  scioperi.py  ws.py
backend/migrations/: env.py
backend/migrations/versions/: a2b987c27d10_initial_schema_devices_favorites_.py
backend/secrets/: README.md
backend/tests/: _generate_fixtures.py  conftest.py  test_alerts.py  test_cache.py  test_db.py  test_endpoints.py  test_gtfs_static.py  test_me.py  test_migrations.py  test_push.py  test_realtime.py  test_scioperi.py  test_ws.py
backend/tests/fixtures/: alerts.pb  scioperi.csv  scioperi_rinominato.csv  trip_updates.pb  vehicle_positions.pb
docs/: BACKLOG.md  DATA_SOURCES.md  DESIGN_PROMPTS.md  FIREBASE_SETUP.md  ROADMAP.md  SPEC.md
infra/: docker-compose.yml
mobile/: README.md  pubspec.yaml
mobile/android/: settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/it/anduma/transito/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/api/: api_client.dart  config.dart  favorites_store.dart  models.dart  push_manager.dart  realtime.dart  subscriptions_store.dart
mobile/lib/screens/: arrivi_screen.dart  avvisi_screen.dart  home_shell.dart  info_screen.dart  mappa_screen.dart  preferiti_screen.dart
mobile/lib/theme/: app_theme.dart  tokens.dart
mobile/lib/widgets/: alert_sheet.dart  arrival_row.dart  line_pill.dart  pulsing_dot.dart  state_views.dart  vehicle_marker.dart
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
