[project]
name = "transito-torino-backend"
version = "0.0.1"
description = "Backend read-only per arrivi, mezzi live e avvisi del trasporto pubblico GTT (Torino)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "gtfs-realtime-bindings>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "firebase-admin>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Le revisioni Alembic sono autogenerate con lo stile del template upstream.
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: Depends()/Query() nei default degli argomenti è il pattern idiomatico FastAPI.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
